--- a/coding/templates/coding/index.html
+++ b/coding/templates/coding/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
-{% block title %}Immunologist, Programmer and Photographer{% endblock %}
+{% block title %}Coding{% endblock %}
 
 {% block block_nav %}
   <li class="nav-item">
@@ -83,11 +83,15 @@
       </li>
     </ul>
 
-    <div class="subheading mb-2">Blog on Data Analysis and Deep Learning</div>
-    <div class="social-icons">
+    <div class="subheading mb-2">Blog and GitHub</div>
+    <div class="social-icons subheading">
       <a href="https://medium.com/@yuan_tian" target="_blank">
         <i class="fab fa-medium-m" title="Blog"></i>
       </a>
+      <a href="https://github.com/naity" target="_blank">
+        <i class="fab fa-github" title="GitHub"></i>
+      </a>
     </div>
+
   </div>
 {% endblock %}
