--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -31,6 +31,9 @@
       <a href="https://www.linkedin.com/in/ytianimmune/" target="_blank"> 
         <i class="fab fa-linkedin-in" title="LinkedIn"></i>
       </a>
+      <a href="https://scholar.google.com/citations?user=e_Idg1cAAAAJ&hl=en" target="_blank">
+        <i class="ai ai-google-scholar-square" title="Google Scholar"></i>
+      </a>
       <a href="https://medium.com/@yuan_tian" target="_blank">
         <i class="fab fa-medium-m" title="Medium"></i>
       </a>
