--- a/research/templates/research/index.html
+++ b/research/templates/research/index.html
@@ -26,7 +26,7 @@
 {% block block_body %}
   <div class="container">
     <div class="page-header">
-      <h2 class="text-primary">IMMUNOLOGY</h2>
+      <h2 class="text-primary">IMMUNOLOGY & BIOINFORMATICS</h2>
     </div>
 
     <p class="lead">I study T cells, which are foot soldiers of our immune system. My research is helping develop better vaccines and therapeutics that fight infectious diseases and cancers.</p>
