--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -34,6 +34,9 @@
       <a href="https://scholar.google.com/citations?user=e_Idg1cAAAAJ&hl=en" target="_blank">
         <i class="ai ai-google-scholar-square" title="Google Scholar"></i>
       </a>
+      <a href="https://www.researchgate.net/profile/Yuan_Tian164" target="_blank">
+        <i class="ai ai-researchgate-square" title="ResearchGate"></i>
+      </a>
       <a href="https://medium.com/@yuan_tian" target="_blank">
         <i class="fab fa-medium-m" title="Medium"></i>
       </a>
