--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -23,8 +23,8 @@
     <h1 class="mb-0">YUAN
       <span class="text-primary">TIAN</span>
     </h1>
-    <div class="subheading mb-5">La Jolla Institute for Immunology · 9420 Athena Cir, La Jolla, CA 92037  ·
-      <a href="mailto:name@email.com">ytian@lji.org</a>
+    <div class="subheading mb-5">Fred Hutchinson Cancer Research Center · Seattle, WA ·
+      <a href="mailto:name@email.com">ytian@fredhutch.org</a>
     </div>
     <p class="lead mb-5">I am an immunologist with bioinformatics and programming skills. Interested in data analysis, machine learning, and deep learning.</p>
     <div class="social-icons">
