--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load staticfiles %}
+{% load static %}
 
 {% block title %}Immunologist, Programmer and Photographer{% endblock %}
 
@@ -31,7 +31,7 @@
       <a href="https://www.linkedin.com/in/ytianimmune/" target="_blank"> 
         <i class="fab fa-linkedin-in" title="LinkedIn"></i>
       </a>
-      <a href="https://scholar.google.com/citations?user=e_Idg1cAAAAJ&hl=en" target="_blank">
+      <a href="https://scholar.google.com/citations?user=8s-gqV0AAAAJ&hl=en" target="_blank">
         <i class="ai ai-google-scholar-square" title="Google Scholar"></i>
       </a>
       <a href="https://www.researchgate.net/profile/Yuan_Tian164" target="_blank">
