--- a/photography/templates/photography/index.html
+++ b/photography/templates/photography/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load photography_extras %}
-{% load staticfiles %}
+{% load static %}
 
 {% block title %}Photography{% endblock %}
 
