--- a/research/templates/research/index.html
+++ b/research/templates/research/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load research_extras %}
-{% load staticfiles %}
+{% load static %}
 
 {% block title %}Research{% endblock %}
 
@@ -29,7 +29,7 @@
       <h2 class="text-primary">IMMUNOLOGY & BIOINFORMATICS</h2>
     </div>
 
-    <p class="lead">I study T cells, which are foot soldiers of our immune system. My research is helping develop better vaccines and therapeutics that fight infectious diseases and cancers.</p>
+    <p class="lead">My research focuses on immunology and is helping develop better vaccines and therapeutics that fight infectious diseases and cancers.</p>
     
     <div class="card bg-light">
       <div class="card-header">
