--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,7 +26,7 @@
     <div class="subheading mb-5">Fred Hutchinson Cancer Research Center · Seattle, WA ·
       <a href="mailto:name@email.com">ytian@fredhutch.org</a>
     </div>
-    <p class="lead mb-5">I am an immunologist with bioinformatics and programming skills. Interested in data analysis, machine learning, and deep learning.</p>
+    <p class="lead mb-5">I am a computational immunologist with interests in data analysis, machine learning, and deep learning.</p>
     <div class="social-icons">
       <a href="https://www.linkedin.com/in/ytianimmune/" target="_blank"> 
         <i class="fab fa-linkedin-in" title="LinkedIn"></i>
