--- a/research/templates/research/index.html
+++ b/research/templates/research/index.html
@@ -29,7 +29,7 @@
       <h2 class="text-primary">IMMUNOLOGY & BIOINFORMATICS</h2>
     </div>
 
-    <p class="lead">My research focuses on immunology and is helping develop better vaccines and therapeutics that fight infectious diseases and cancers.</p>
+    <p class="lead">Turn single-cell data into immunological insights</p>
     
     <div class="card bg-light">
       <div class="card-header">
