--- a/coding/templates/coding/index.html
+++ b/coding/templates/coding/index.html
@@ -10,8 +10,8 @@
   <li class="nav-item">
     <a class="nav-link js-scroll-trigger" href="{% url 'research:index' %}">RESEARCH</a>
   </li>
-  <li class="nav-item active">
-    <a class="nav-link js-scroll-trigger" href="{% url 'coding:index' %}">CODING</a>
+  <li class="nav-item">
+    <a class="nav-link active js-scroll-trigger" aria-current="page" href="{% url 'coding:index' %}">CODING</a>
   </li>
   <li class="nav-item">
     <a class="nav-link js-scroll-trigger" href="{% url 'photography:index' %}">PHOTOGRAPHY</a>
