--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,8 +4,8 @@
 {% block title %}Immunologist, Programmer and Photographer{% endblock %}
 
 {% block block_nav %}
-  <li class="nav-item active">
-    <a class="nav-link js-scroll-trigger" href="{% url 'home:index' %}">HOME</a>
+  <li class="nav-item">
+    <a class="nav-link active js-scroll-trigger" aria-current="page" href="{% url 'home:index' %}">HOME</a>
   </li>
   <li class="nav-item">
     <a class="nav-link js-scroll-trigger" href="{% url 'research:index' %}">RESEARCH</a>
