--- a/research/templates/research/index.html
+++ b/research/templates/research/index.html
@@ -12,8 +12,8 @@
   <li class="nav-item">
     <a class="nav-link js-scroll-trigger" href="{% url 'home:index' %}">HOME</a>
   </li>
-  <li class="nav-item active">
-    <a class="nav-link js-scroll-trigger" href="{% url 'research:index' %}">RESEARCH</a>
+  <li class="nav-item">
+    <a class="nav-link active js-scroll-trigger" aria-current="page" href="{% url 'research:index' %}">RESEARCH</a>
   </li>
   <li class="nav-item">
     <a class="nav-link js-scroll-trigger" href="{% url 'coding:index' %}">CODING</a>
