--- a/photography/templates/photography/index.html
+++ b/photography/templates/photography/index.html
@@ -21,8 +21,8 @@
   <li class="nav-item">
     <a class="nav-link js-scroll-trigger" href="{% url 'coding:index' %}">CODING</a>
   </li>
-  <li class="nav-item active">
-    <a class="nav-link js-scroll-trigger" href="{% url 'photography:index' %}">PHOTOGRAPHY</a>
+  <li class="nav-item">
+    <a class="nav-link active js-scroll-trigger" aria-current="page" href="{% url 'photography:index' %}">PHOTOGRAPHY</a>
   </li>
 {% endblock %}
 
